# cyrt-safe-to-land-aws

./: .gitignore  Dockerfile  build-and-push.sh
api/: pyproject.toml
api/src/: main.py  retrieve_data.py  weather_landing_bundle.pth
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
k8s/: deployment.yaml
src/: inference.py  main.py
