[project]
name = "cyrt-safe-to-land-aws"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cfgrib>=0.9.15.1",
    "eccodes>=2.47.0",
    "ecmwf-opendata>=0.3.30",
    "fastapi>=0.128.8",
    "numpy>=2.0.2",
    "torch>=2.8.0",
    "uvicorn>=0.39.0",
    "xarray>=2024.7.0",
]
